Fixed alignment of other checkboxes

--- a/app/design/adminhtml/Magento/backend/Magento_Review/web/css/source/_module.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Review/web/css/source/_module.less
@@ -77,11 +77,3 @@
         }
     }
 }
-
-.review-rating-edit {
-    .admin__field-control.control {
-        input[type='checkbox'] {
-            margin: 8px 0 0 0;
-        }
-    }
-}
